Fix contrast ratio

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -68,7 +68,7 @@
 /* Comment */ .chroma .c { color:#6272a4 }
 /* CommentHashbang */ .chroma .ch { color:#6272a4 }
 /* CommentMultiline */ .chroma .cm { color:#6272a4 }
-/* CommentSingle */ .chroma .c1 { color:#6272a4 }
+/* CommentSingle */ .chroma .c1 { color:#B7B7B7 }
 /* CommentSpecial */ .chroma .cs { color:#6272a4 }
 /* CommentPreproc */ .chroma .cp { color:#ff79c6 }
 /* CommentPreprocFile */ .chroma .cpf { color:#ff79c6 }
